--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="main">
 
         <div class="sub main">
-            <h2 class="home">home - men</h2>
+
+            <h2 class="home">Home - men</h2>
             <h1 class="name">watches</h1>
             <div class="textbtn">
             <h3 class="product">09 product</h3>
