--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="sub main">
 
             <h2 class="home">Home - men</h2>
-            <h1 class="name">watches</h1>
+            <h1 class="name">Watches</h1>
             <div class="textbtn">
             <h3 class="product">09 product</h3>
             <div class="filter-button">
