--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2 class="home">Home - men</h2>
             <h1 class="name">Watches</h1>
             <div class="textbtn">
-            <h3 class="product">09 product</h3>
+            <h3 class="product">09 products</h3>
             <div class="filter-button">
 
                 <img src="images/group-45.svg" alt="group-45">
