--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="sub main">
 
-            <h2 class="home">Home - men</h2>
+            <h2 class="home">Home - Men</h2>
             <h1 class="name">Watches</h1>
             <div class="textbtn">
             <h3 class="product">09 products</h3>
