--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
 
             <div class="images">
-                <img src="images/rectangle-27.svg" alt="rectangle-27">
+                <img src="images/rectangle-28.svg" alt="rectangle-28">
                 <h1 class="card-title">Luxe 3 series</h1>
 
                 <div class="item">
@@ -124,7 +124,7 @@
             </div>
 
             <div class="images">
-             <img src="images/rectangle-29.svg" alt="rectangle-29">
+                <img src="images/rectangle-136.svg" alt="rectangle-136"
                 <h1 class="card-title">Luxe 3 series</h1>
 
                 <div class="item">
