--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
 
             <div class="images">
-                <img src="images/rectangle-136.svg" alt="rectangle-136"
+                <img src="images/rectangle-136.svg" alt="rectangle-136">
                 <h1 class="card-title">Luxe 3 series</h1>
 
                 <div class="item">
