--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h2 class="home">Home - Men</h2>
         <h1 class="name">Watches</h1>
         <div class="textbtn">
-          <h1 class="product">09 Products</h1>
+        <h3 class="product">09 Products</h3>
           <div class="filter-button">
-            <img src="images/group-45.svg" alt="group-45" />
+            <img src="images/group-45.svg" alt="group-45">
             <h4>Filters</h4>
           </div>
         </div>
